# P3

starting-framework/: P3-CSharp.cabal  README.md  useTest.cs
starting-framework/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
starting-framework/dist-newstyle/src/: uu-tc-9713003ef9171eae.cache  uu-tc-d41e9e0a628ee750.cache
starting-framework/src/: Main.hs
starting-framework/src/CSharp/: Analysis.hs  CodeGen.hs  Parser.hs
